# edge-tools

./: README.md  ROUTER-SKILL.md  cocapn-health.py  cocapn-test.py  edge-chat.py  edge-chat.service  edge-gateway.py  edge-gateway.service  edge-rag.py  edge-router.py  edge-setup.py  fleet-health.py  fleet-sync.py  gpu-bench.py  jetson-monitor.py  plato-cron.py  pyproject.toml  skill-tree.py  tensorrt-bench.py  tile-graph.py
edge/: EDGE-ROUTER-SKILL.md  __init__.py  config.py  edge-router.py  monitoring.py  ollama_client.py  similarity.py  storage.py
